Fixed: z-indexing issue with slider arrows on some setups

--- a/framework/assets/css/themeblvd-rtl.css
+++ b/framework/assets/css/themeblvd-rtl.css
@@ -5297,6 +5297,7 @@ blockquote small {
 	-ms-transform: translate(0, -50%); /* IE9 */
 	-webkit-transform: translate(0, -50%);
 	transform: translate(0,-50%);
+	z-index: 15;
 }
 .tb-simple-slider.nav-arrows-standard .tb-slider-arrows a.prev {
 	background-size: 8px 14px;
@@ -6081,6 +6082,7 @@ body.mobile .tb-bg-video {
 	top: 5px;
 	left: 5px;
 	right: inherit;
+	z-index: 15;
 }
 .tb-post-slider.style-2 .carousel-caption {
 	background: #000000;
